--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@prisma/client": "^5.6.0",
     "@nestjs/jwt": "^10.2.0",
     "bcrypt": "^5.1.1",
